# Visualisation-ZBuffer

./: README.md
Code_Exemple_SDL/Code_Exemple_SDL/: CMakeLists.txt  Makefile  Segment.h  donnees.h  infographie.cpp
Documents/Diagrammes/: ClasseIteration1.puml
Ressources/: Airplane_v2.ply  airplane1.ply  boy2.ply  cubeNorm.ply  kerolamp2.ply  pyramide.ply  pyramide1.ply  test.ply  test1.ply  test2.ply
reseau/: CMakeLists.txt  Lecture.c  main.c
src/: CMakeLists.txt  Face.cpp  Face.h  Lecture.cpp  Lecture.h  PlyObject3D.cpp  PlyObject3D.h  ReadPlyFile.cpp  ReadPlyFile.h  Vertex.cpp  Vertex.h  comparateurFichier.py  main.cpp  test.txt
src/Code_Exemple_SDL/: 3D.cpp  3D.h  CMakeCache.txt  CMakeLists.txt  Face.h  Makefile  Object3D.cpp  Segment.cpp  base.cpp  base.h  cmake_install.cmake  formesSimples.cpp  infographie.cpp  matrices.cpp  matrices.h
src/Code_Zbuffer/: 3D.cpp  3D.h  CMakeLists.txt  Face.cpp  Face.h  Object3D.cpp  Object3D.h  Segment.cpp  Segment.h  Vertex.h  base.h  donnees.h  formesSimples.cpp  formesSimples.h  main.cpp  matrices.h  triangles.cpp  triangles.h
src/Code_Zbuffer/Ressources/: Al.ply  airplaneTest.ply  boy.ply  cube.ply  cubeNorm2.ply  pyramide.ply  pyramideTri.ply
src/python/: comparateurFichier.py  resultats.csv  stokeurDonnéTest.py
src/test/: test.cpp
